--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             }
         </style>
 
-        <title>Nathan Ford · About</title>
+        <title>Nathan Ford &middot; About</title>
     </head>
 
     <body>
@@ -48,7 +48,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
