--- a/essay_4.html
+++ b/essay_4.html
@@ -7,7 +7,7 @@
         <script src = js/main.js></script>
         <link rel = stylesheet href = css/main.css>
 
-        <title>Nathan Ford · Essay 2015</title>
+        <title>Nathan Ford &middot; Essay 2015</title>
 	</head>
 
     <body>
@@ -18,7 +18,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
@@ -33,16 +33,16 @@
                 It is initially a slightly unnerving experience sitting for a portrait with
                 Nathan Ford. With piano music softly meandering in the background, and the
                 artist looking one intensely in the eye, it helped to home in on a small
-                triangle of Nathan’s furrowed brow as a means of warding off wandering
-                thoughts. ‘Loose!’ he repeats softly. The scrunched
+                triangle of Nathan&rsquo;s furrowed brow as a means of warding off wandering
+                thoughts. &lsquo;Loose!&rsquo; he repeats softly. The scrunched
                 concentration is immediately recognisable from his archive of rather stern
                 and unflattering self-portraits, and more than a little redolent of the
-                painting of ‘Dad’ in this show. His father Stan, unused to
+                painting of &lsquo;Dad&rsquo; in this show. His father Stan, unused to
                 an extended period of remaining still, busied himself while sitting for
                 his portrait worrying about the garage he runs. The clenched look of
                 concern is as familiar as the subject himself, though it is not how Ford
                 senior would like himself presented. Noteworthy too is the title,
-                describing the oft-painted Stan from the artist’s point of view for the
+                describing the oft-painted Stan from the artist&rsquo;s point of view for the
                 first time.
             </p>
 
@@ -51,8 +51,8 @@
                 experience of being with the sitter. He is well acquainted with his
                 chosen subjects and tries to describe something of their interiority.
                 Though this attempt will always to some extent be a fumbling in the dark,
-                it addresses the simple question in Yeats’ poem The Man and the Echo,
-                ‘What do we know but that we face one another in this place.’
+                it addresses the simple question in Yeats&rsquo; poem The Man and the Echo,
+                &lsquo;What do we know but that we face one another in this place.&rsquo;
             </p>
 
             <p>
@@ -77,16 +77,16 @@
                 more or less, with their own ongoing project (Grey Hope), albeit with the
                 imprimatur of paternal tutelage and an ever-decreasing degree of
                 choreography. One can appreciate that he wants a painting like
-                ‘Carnival’ to be enjoyed in all its glory; not to give it import, but
+                &lsquo;Carnival&rsquo; to be enjoyed in all its glory; not to give it import, but
                 to show its import.
             </p>
 
             <p>
                 It seems obvious to say that Nathan is painting his life, and that drawing
-                and painting has become part and parcel of his children’s experience. On
+                and painting has become part and parcel of his children&rsquo;s experience. On
                 a visit to Rome in the autumn of 2013, he characteristically eschews the
                 oft-depicted delights of the eternal city, offering us instead the
-                ‘Diario’ paintings, from the rooftop of his rented apartment at the
+                &lsquo;Diario&rsquo; paintings, from the rooftop of his rented apartment at the
                 same time each morning. When in Rome, Ford will do exactly what he
                 thinks he should and though it may seem to be a contrariness, it is with a
                 hard- won confidence and single-mindedness that he carves a way through
@@ -96,18 +96,18 @@
 
             <p>
                 The wide open urban vistas which include an unguarded child are still a part
-                of the artist’s oeuvre. A tiny Joachim features in ‘Pocket’,
-                enveloped by the sweeping architecture of Brighton’s Victorian
+                of the artist&rsquo;s oeuvre. A tiny Joachim features in &lsquo;Pocket&rsquo;,
+                enveloped by the sweeping architecture of Brighton&rsquo;s Victorian
                 railway station, the diminutive figure joined by an assortment of
                 cartoonish accomplices. The spiders, bees and the blue elephant soften the
-                sense of peril, much more present in ‘Recalculated’. It is
+                sense of peril, much more present in &lsquo;Recalculated&rsquo;. It is
                 Joachim again (the more boisterous of his two sons) who is nonchalantly
-                strolling along the pavement in ‘Collective’, a painting which extends
-                the idea of employing children’s graffiti in an urban setting.
+                strolling along the pavement in &lsquo;Collective&rsquo;, a painting which extends
+                the idea of employing children&rsquo;s graffiti in an urban setting.
                 This collaboration, where members of the public were invited to draw on to
                 the basic street scene depicted, was part of his contribution to an arts
                 festival during the summer of 2014. It appears to build on
-                Picasso’s remark that all children are artists - Nathan remarks on the
+                Picasso&rsquo;s remark that all children are artists - Nathan remarks on the
                 reticence of adults to take up the offer to simply draw. A form of
                 expression once perfectly natural becomes anathema with age. One can
                 see why he would want to capture the artistic yen in his children.
@@ -115,17 +115,17 @@
             </p>
 
             <p>
-                Other larger paintings depict vignettes from the artist’s life that will be
-                familiar to aficionados. ‘Apart’ is an effervescent, flashing
+                Other larger paintings depict vignettes from the artist&rsquo;s life that will be
+                familiar to aficionados. &lsquo;Apart&rsquo; is an effervescent, flashing
                 moment on Oxford Street as a cascade of buses slides past. The sense
                 of urgency is a direct contrast to the scrupulousness of the small
-                portraits. ‘Quinn II’ is a more sombre reflection, set in a semi
-                rural side street near his current home. In ‘Flock’ sheep gather
-                comically in a field on the artist’s running circuit. Even the bottles
+                portraits. &lsquo;Quinn II&rsquo; is a more sombre reflection, set in a semi
+                rural side street near his current home. In &lsquo;Flock&rsquo; sheep gather
+                comically in a field on the artist&rsquo;s running circuit. Even the bottles
                 unearthed from his garden which appear in the still lifes are mainstays of
                 the studio and the life he has carved out for himself and his family, many
                 miles from South East London and the view of Crystal Palace so familiar to
-                him from his own childhood ‘bedroom window’.
+                him from his own childhood &lsquo;bedroom window&rsquo;.
             </p>
 
             <p>
@@ -140,8 +140,8 @@
                 single eyes of his nearest and dearest. These small gems sparkle,
                 unerringly and without flinching, in a testimony to what a small portrait
                 can achieve even when, or especially when, the drawing medium has been
-                reduced to its merest essentials. ‘All memory’ Richard Hugo
-                says, ‘resolves itself into gaze.’
+                reduced to its merest essentials. &lsquo;All memory&rsquo; Richard Hugo
+                says, &lsquo;resolves itself into gaze.&rsquo;
             </p>
 
             <p>Aidan Quinn 2015</p>
