--- a/essay_5.html
+++ b/essay_5.html
@@ -7,7 +7,7 @@
         <script src = js/main.js></script>
         <link rel = stylesheet href = css/main.css>
 
-        <title>Nathan Ford · Essay 2017</title>
+        <title>Nathan Ford &middot; Essay 2017</title>
 	</head>
 
     <body>
@@ -18,7 +18,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
@@ -53,7 +53,7 @@
 			<p>
 				It seems when painting there is a desire to preserve a record of every visit to a canvas; the ground-work, the plan, but also the serendipity, 
 				the wondering and wandering which is sometimes neat and quick,  or occasionally lost in battle near the finish-line.  
-				Nathan’s mother attests to his slow writing and ponderous reading, and at an early stage of his childhood he was conscious of having to develop strategies to get around this.  
+				Nathan&rsquo;s mother attests to his slow writing and ponderous reading, and at an early stage of his childhood he was conscious of having to develop strategies to get around this.  
 				It is not hard to see how a natural facility for drawing would be encouraged and amplified.
 			</p>
 
@@ -61,7 +61,7 @@
 				So there is initially a definite structure, but no fixed destination.  
 				He revels in finding threads, visual resonances, in his own way and in his own time.  
 				Though it perhaps seems like a habit of the contrarian, it may simply have germinated from a response to dyslexia, and gives him a very singular rationale. 
-				At times I think of Nathan as a painting version of the E.M. Forster character who exclaims, ‘Logic!  Good gracious!  
+				At times I think of Nathan as a painting version of the E.M. Forster character who exclaims, &lsquo;Logic!  Good gracious!  
 				What rubbish! How can I tell you what I think till I see what I say?”
 			</p>
 
@@ -72,16 +72,16 @@
 			</p>
 
 			<p>
-				Painting is Nathan’s prime mode of communication, a means for talking about his life, as well as to condense information into visual form. 
+				Painting is Nathan&rsquo;s prime mode of communication, a means for talking about his life, as well as to condense information into visual form. 
 				We see his children growing up, going out into the world, wandering through city streets, dwarfed by square urban building complexes or huge walls of graffiti.  
-				We see the children’s bees, their hulking monsters, their ragged-toothed fish, their flying pigs, informing the more expansive streetscapes, and standing as their own discrete works in the Grey Hope series.
+				We see the children&rsquo;s bees, their hulking monsters, their ragged-toothed fish, their flying pigs, informing the more expansive streetscapes, and standing as their own discrete works in the Grey Hope series.
 			</p>
 
 			<p>
 				There are portraits of people he is very familiar with, among these, of course, his parents.  
 				However the fulcrum of the show is 20 paintings of similar format which were included in a recently published book, <i>How to Make a Proper Alien</i>.  
-				The book was in part prompted by the death of two friends.  However the major driver was the terminal sickness of his children’s closest friend, Nathan’s 10 year old nephew Thomas.  
-				It is Nathan’s response to the inability to impart suitable or relevant words of comfort to those nearest to him. 
+				The book was in part prompted by the death of two friends.  However the major driver was the terminal sickness of his children&rsquo;s closest friend, Nathan&rsquo;s 10 year old nephew Thomas.  
+				It is Nathan&rsquo;s response to the inability to impart suitable or relevant words of comfort to those nearest to him. 
 				These paintings are also a way of <i>being</i>, a creative pathway out of the interstices of grief; an act of something from nothing that allows one to be made new, to move forward.
 			</p>
 
@@ -92,9 +92,9 @@
 			</p>
 
 			<p>
-				In order to say something meaningful about one’s  life it seems necessary to shut out as much as possible any fear, doubt, or discomfiture that might ensue from the act of personal revelation that a solo show may involve.   
-				It requires confrontation, experimentation, a willingness to fail, a fair share of creative inertia, and simply keeping one’s eyes open despite the urge to look away.  The bi-annual focus of a one man exhibition has given Nathan a rhythm to work within.  
-				He uses the cycle of time in the only way he knows; instinctively, with purpose, in a manner that will I am sure engage his many admirers, whether they know a particular work’s inspiration or not. 
+				In order to say something meaningful about one&rsquo;s  life it seems necessary to shut out as much as possible any fear, doubt, or discomfiture that might ensue from the act of personal revelation that a solo show may involve.   
+				It requires confrontation, experimentation, a willingness to fail, a fair share of creative inertia, and simply keeping one&rsquo;s eyes open despite the urge to look away.  The bi-annual focus of a one man exhibition has given Nathan a rhythm to work within.  
+				He uses the cycle of time in the only way he knows; instinctively, with purpose, in a manner that will I am sure engage his many admirers, whether they know a particular work&rsquo;s inspiration or not. 
 				In spite of the seam of precious mortality that runs throughout, these are not melancholy paintings. 
 				They are touched with a mature sense of skill and awareness, a child-like ingenuity, and most importantly of all, the subtle harmony of authenticity.
 			</p>
