--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,7 @@
             }
         </style>
 
-        <title>Nathan Ford · Project GreyHope</title>
+        <title>Nathan Ford &middot; Project GreyHope</title>
     </head>
 
     <body>
@@ -74,7 +74,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects class = this><img src = assets/images/icons/projects.png></a>
             <a href = about><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
