--- a/works.html
+++ b/works.html
@@ -51,7 +51,7 @@
             }
         </style>
 
-        <title>Nathan Ford · Works</title>
+        <title>Nathan Ford &middot; Works</title>
     </head>
 
     <body>
@@ -62,7 +62,7 @@
             <a href = works class = this><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
