--- a/essay_1.html
+++ b/essay_1.html
@@ -7,7 +7,7 @@
         <script src = js/main.js></script>
         <link rel = stylesheet href = css/main.css>
 
-        <title>Nathan Ford · Essay 2009</title>
+        <title>Nathan Ford &middot; Essay 2009</title>
 	</head>
 
     <body>
@@ -18,7 +18,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
@@ -26,36 +26,36 @@
 			<h1>Catalogue essay 2009 ~ Aidan Quinn</h1>
 
 			<i>
-				It’s hard being black. You ever been black? I was black once,
+				It&rsquo;s hard being black. You ever been black? I was black once,
 				when I was poor.
 			</i> ~ Larry Holmes
 
 			<p>
-				Nathan Ford’s latest collection of work 
+				Nathan Ford&rsquo;s latest collection of work 
 				for the most part features close-up portraits of heads, most of these black 
 				males. They are as ever, fragmented, on the edge of dissolution. What may be 
 				termed the sensory features; ears, mouth, nose, hair, are in the main shrouded 
 				or blocked out, giving an introverted, contemplative feel to each visage. It is 
 				as if the artist is looking for something essential in the deadpan, vulnerable 
 				yet often forthright expressions on these faces. Who is in there? As Francis 
-				Bacon once persisted in painting the image of the nurse’s screaming mouth from 
-				Eisenstein’s Battleship Potemkin, Ford often homes in on one eye in 
-				detail-‘otherwise the world comes in and there is too much distraction’, he 
+				Bacon once persisted in painting the image of the nurse&rsquo;s screaming mouth from 
+				Eisenstein&rsquo;s Battleship Potemkin, Ford often homes in on one eye in 
+				detail- &lsquo;otherwise the world comes in and there is too much distraction&rsquo;, he 
 				reasons.
 			</p>
 			
 			<p>
 				There is a fundamental element of 
 				face-to-face communication that he is attempting to portray with this collection 
-				of heads. Two feet from another human being, rather than ‘locking into’ what 
+				of heads. Two feet from another human being, rather than &lsquo;locking into&rsquo; what 
 				someone may be saying, we will often home in on or get distracted with a facial 
 				feature; a scar, a prominent nose, a gap in the teeth. What Ford often allows 
-				to shine through in these portraits is the eye, the ‘traitor to the heart’. 
-				‘Perhaps it is just shyness’, he suggests, ‘when confronted with another person, 
+				to shine through in these portraits is the eye, the &lsquo;traitor to the heart&rsquo;. 
+				&lsquo;Perhaps it is just shyness&rsquo;, he suggests, &lsquo;when confronted with another person, 
 				another human heart that has beaten many thousands of times, blood coursing 
 				through the veins, all I want to do is escape, disappear into the cocoon of my 
-				studio’. It is essentially the panic of communication that he tries to put into 
-				paint. ‘It is always hard to face people’, as John McGahern put it.
+				studio&rsquo;. It is essentially the panic of communication that he tries to put into 
+				paint. &lsquo;It is always hard to face people&rsquo;, as John McGahern put it.
 			</p>
 
 			<p>
@@ -65,7 +65,7 @@
 				it seems that the differentiation as a black man (as opposed to, say, an artist) 
 				is one that he is forced to return to, even if thinking of his identity 
 				predominantly in that way is something the painter himself left behind with 
-				adolescence. ‘Part of me is sick of being foreign’, he says.
+				adolescence. &lsquo;Part of me is sick of being foreign&rsquo;, he says.
 			</p>
 
 			<p>
@@ -75,7 +75,7 @@
 				organic ground that seems to blend with the emerging faces so well. Whether 
 				they are knowing or innocent, all these faces seem shorn of self-consciousness, 
 				attention sometimes averted. At other times the viewer is faced starkly, with a 
-				frankness which brings to mind the last of Rembrandt’s self-portraits (1669). 
+				frankness which brings to mind the last of Rembrandt&rsquo;s self-portraits (1669). 
 				Though all the faces are black there is a diversity of ethnicity, and clear 
 				variations in skin colour. Ford has in the last couple of years adjusted the mix 
 				of pigments he uses and enjoys the challenge of the subtle tonal variation of 
@@ -87,14 +87,14 @@
 
 			<p>
 				Familiar also are the pencil lines on the 
-				portraits, reminiscent of Giacometti’s ‘scribbled’ portraits. This comparison is 
+				portraits, reminiscent of Giacometti&rsquo;s &lsquo;scribbled&rsquo; portraits. This comparison is 
 				further accentuated in the drawings in the exhibition itself. Familiar too are 
 				the lonely protagonists on the margins of fragmented cityscapes, a modern 
 				melange which feels on the edge of chaos. The sense of panic is stronger in 
 				Carbon Lung than Usera, both of which have their genesis in Madrid. The latter 
 				has a softer feel, as if the day is warming up, a morning painting perhaps. In 
 				Souk the claustrophobia, the quiet whisper of a threatening world is very much 
-				there, as a child (recognisably the artist’s son) looks around fretfully towards 
+				there, as a child (recognisably the artist&rsquo;s son) looks around fretfully towards 
 				a cloaked figure in the background.
 			</p>
 
@@ -109,7 +109,7 @@
 				is where he pits his wits against the reality that he sees around him and for 
 				the moment at least it would seem from this collection of work, it is a battle 
 				that he is excelling in. As a painter I think Ford would go along with Bacon.
-				‘You could say that I have no inspiration, that I only need to paint.’
+				&lsquo;You could say that I have no inspiration, that I only need to paint.&rsquo;
 			</p>
 
 			<p>Aidan Quinn 2009</p>
