--- a/essay_3.html
+++ b/essay_3.html
@@ -7,7 +7,7 @@
         <script src = js/main.js></script>
         <link rel = stylesheet href = css/main.css>
 
-        <title>Nathan Ford · Essay 2013</title>
+        <title>Nathan Ford &middot; Essay 2013</title>
 	</head>
 
     <body>
@@ -18,7 +18,7 @@
             <a href = works><img src = assets/images/icons/works.png></a>
             <a href = projects><img src = assets/images/icons/projects.png></a>
             <a href = about class = this><img src = assets/images/icons/about.png></a>
-            <!-- <a href = book><img src = assets/images/icons/book.png></a> -->
+            <a href = book><img src = assets/images/icons/book.png></a>
             <a href = https://youtu.be/aJqjSGwKxBc target = _blank><img src = assets/images/icons/youtube.svg></a>
         </section>
 
