--- a/book.html
+++ b/book.html
@@ -169,8 +169,7 @@
                     startPage: 3,
                     showCover: true,
                     maxShadowOpacity: .5,
-                    size: "stretch",
-                    mobileScrollSupport: false
+                    size: "stretch"
                 }).loadFromHTML(book.querySelectorAll("img"))
             </script>
 
