--- a/book.html
+++ b/book.html
@@ -17,6 +17,7 @@
             }
 
             .book {
+                transition-duration: 1s;
                 position: absolute;
                 right: 0
             }
