--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             const canvas = document.querySelector("canvas")
             const ctx = canvas.getContext("2d")
 
-            const images = ["Reuben-4.22.jpg", "Joachim-8.21.jpg", "Anna-4.22.jpg", "Self-8.21.jpg"]
+            const images = ["Joachim-8.21.jpg", "Reuben-4.22.jpg", "Anna-4.22.jpg", "Self-8.21.jpg"]
             const slider = {start: true, index: 0, timer: -FADE / 2}
 
             function start() {
