--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         </a>
 
         <script>
-            const FRAME = 480
-            const FADE = 180
+            const FRAME = 680
+            const FADE = 480
 
             const canvas = document.querySelector("canvas")
             const ctx = canvas.getContext("2d")
 
-            const images = ["Joachim-8.21.jpg", "Reuben-4.22.jpg", "Anna-4.22.jpg", "Self-8.21.jpg"]
+            const images = ["Joachim-12.23.jpg", "Self-10.22.jpg", "Reuben-12.23.jpg"]
             const slider = {start: true, index: 0, timer: -FADE / 2}
 
             function start() {
