--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <script>
                     const TRANSITION = 12000 // time in milliseconds (1000:1)
                     const PAUSE = 10000
-                    const IMAGES = ["Joachim-12.23.jpg", "Self-10.22.jpg", "Reuben-12.23.jpg"]
+                    const IMAGES = ["Self-10.22.jpg",  "Joachim-12.23.jpg", "Reuben-12.23.jpg"]
 
                     const slide = {index: -1, fade: 0, pause: 0, time: performance.now()}
                     const canvas = document.currentScript.parentNode
