--- a/works.html
+++ b/works.html
@@ -68,9 +68,9 @@
 
         <section class = main>
             <div>
-                <a class = spotlight data-page = false href = assets/images/works/Joachim-12.23.jpg title = "Joachim 12.23 - oil on canvas - 28cm &times; 40cm - 2023"><img src = assets/images/works/Joachim-12.23_.jpg title = "Joachim 12.23"></a>
+                <a class = spotlight data-page = false href = assets/images/works/Monument-3.jpg title = "Monument 3 - oil on board - 58cm &times; 74cm - 2024"><img src = assets/images/works/Monument-3_.jpg title = "Monument 3"></a>
                 <a class = spotlight data-page = false href = assets/images/works/At-The-Exit.jpg title = "At The Exit - oil on board - 170cm &times; 122cm - 2020"><img src = assets/images/works/At-The-Exit_.jpg title = "At The Exit"></a>
-                <a class = spotlight data-page = false href = assets/images/works/Reuben-12.23.jpg title = "Reuben 12.23 - oil on canvas - 28cm &times; 40cm - 2023"><img src = assets/images/works/Reuben-12.23_.jpg title = "Reuben 12.23"></a>
+                <a class = spotlight data-page = false href = assets/images/works/Reuben-12.23.jpg title = "Reuben 12.23 - oil on canvas - 28cm &times; 40cm - 2023 - sold"><img src = assets/images/works/Reuben-12.23_.jpg title = "Reuben 12.23"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Dump.jpg title = "Dump - oil on board - 170cm &times; 122cm - 2023"><img src = assets/images/works/Dump_.jpg title = "Dump"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Self-10.22.jpg title = "Self 10.22 - oil on canvas - 28cm &times; 40cm - 2022 - sold"><img src = assets/images/works/Self-10.22_.jpg title = "Self 10.22"></a>
                 <a class = spotlight data-page = false href = assets/images/works/Coast-Road-2.jpg title = "Coast Road 2 - oil on board - 170cm &times; 122cm - 2023"><img src = assets/images/works/Coast-Road-2_.jpg title = "Coast Road 2"></a>
