--- a/about.html
+++ b/about.html
@@ -66,12 +66,11 @@
 
             <ul>
                 <li>Discerning Eye  2017, Invited artist and regional prize, Mall Galleries, London.</li>
-                <li>The Ruskin Prize  2016, Walsall and London - shortlisted artist.</li>
                 <li>Art in Action, Best of the Best - 2nd prize 2015, 1st prize 2014</li>
                 <li>National Art Open  2013, Towry regional prize, London and Chichester.</li>
                 <li>BP Portrait Awards  2011, visitors choice 2nd prize, National Portrait Gallery, London.</li>
-                <li>Selected by The Contemporary Arts Society of Wales. 2010</li>
-                <li>Winsor &amp; Newton Young Artist of the Year Award, Royal Institute of Oil Painters, Mall Galleries, London: 1st prize: 2001, 2003, 2010, 2nd prize: 1999, 2000, Commendation: 2004</li>
+                <li>The Contemporary Arts Society of Wales, selection 2010</li>
+                <li>Winsor &amp; Newton Young Artist Award, Royal Institute of Oil Painters, Mall Galleries, London: 1st prize: 2001, 2003, 2010, 2nd prize: 1999, 2000, Commendation: 2004</li>
                 <li>Arts Council of Wales Project Grant. 2008</li>
                 <li>Royal Society of British Artists, Gordon Hulson Memorial Prize, Mall Galleries, London. 2001</li>
                 <li>Royal West of England Academy, Commendation. 2001</li>
@@ -175,11 +174,11 @@
             <h2>Group Exhibitions</h2>
 
             <ul>
-                <li>The London Art Fair, London. 2006 - 2023</li>
-                <li>British Art Fair, London. 2007 - 2015, 2022</li>
+                <li>The London Art Fair, London. 2006 - 2024</li>
+                <li>British Art Fair, London. 2007 - 2015, 2022, 2023</li>
                 <li>Ffin y Parc Gallery, Conwy. 2021</li>
                 <li>BP Awards, National Portrait Gallery, London. 2000, 2010, 2011, 2012, 2018</li>
-                <li>Ruth Borchard Self Portrait Prize, Piano Nobile. 2017</li>
+                <li>Ruth Borchard Self Portrait Prize, Piano Nobile, London. 2017</li>
                 <li>Discerning Eye, Mall Galleries, London. 1997, 2003, 2011, 2017</li>
                 <li>The Ruskin Prize, Walsall and London. 2016</li>
                 <li>Artist in Residence at The International School of Zug and Lucerne, Switzerland. 2015</li>
@@ -207,7 +206,7 @@
                 <li>New English Art Club, Mall Galleries, London. 2000</li>
                 <li>Young Artists' Britain, Hampton Court Palace, London. 1999</li>
                 <li>Worshipful Company of Painter-Stainers, Livery Hall, London. 1998</li>
-                <li>St David's Studio Gallery, Pembrokeshire. 1997 - 2013</li>
+                
             </ul>
 
             <footer>
